@startuml BCE_DeleteCategory
title Delete Category

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "delete_category.js" as B {
  +openDelete(c)
  +applyFilters()
}

class "DeleteCategoryController" as C {
  +bool
  delete(int category_id)
}

class "FRACategory" as E {
  +bool
  deleteById(int category_id)
}

B -- C
C -- E

@enduml
